# serenity

./: .gitignore  CHANGELOG.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  GETTING_STARTED.md  LICENSE  LICENSE.md  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  TERMS.md  docker-compose.yml  entrypoint.sh  pyproject.toml  serenity_mcp.py  serenity_setup.py  start.bat  start.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
bridge/: package.json
bridge/src/: index.ts  whatsapp.ts
docs/: CHANNEL_PLUGIN_GUIDE.md  MEMORY.md  MY_TOOL.md  PYTHON_SDK.md  WEBSOCKET.md  index.html
finetune/: DATASHEET.md
sense/: install_senses.bat  install_senses.sh
sense/voice_clone/: README.md
serenity/: __init__.py  __main__.py  licence.cp311-win_amd64.pyd  licence.py  licence_lemon.py  serenity.py
serenity/agent/: __init__.py  activity.py  autocompact.py  chunk_notes.py  context.py  dynamics.py  hook.py  loop.py  memory.py  rl.py  runner.py  skills.py  subagent.py  trigger_commands.py  vault_index.py
serenity/api/: __init__.py  server.py
serenity/bus/: __init__.py  queue.py
serenity/channels/: __init__.py  base.py  dingtalk.py  discord.py  email.py  feishu.py  manager.py  matrix.py  mochat.py  msteams.py  qq.py  registry.py  slack.py  telegram.py  websocket.py  wecom.py  weixin.py  whatsapp.py
serenity/cli/: __init__.py  commands.py  onboard.py  stream.py
serenity/command/: __init__.py  builtin.py  router.py
serenity/config/: __init__.py  loader.py  paths.py  schema.py
serenity/cron/: __init__.py  service.py
serenity/heartbeat/: __init__.py  service.py
serenity/providers/: __init__.py  anthropic_provider.py  azure_openai_provider.py  base.py  github_copilot_provider.py  openai_codex_provider.py  openai_compat_provider.py  registry.py  transcription.py  tts.py
serenity/security/: network.py
serenity/senses/: __init__.py  app_index.py  audio_rag.py  camera.py  clap_embedder.py  daemon.py  visual_memory.py  voice_clone.py
serenity/session/: __init__.py  manager.py
serenity/skills/: README.md
serenity/templates/: AGENTS.md  HEARTBEAT.md  SOUL.md  USER.md
serenity/utils/: __init__.py  document.py  evaluator.py  gitstore.py  helpers.py  prompt_templates.py  restart.py  runtime.py  tool_hints.py
serenity_nnn/: __init__.py  nnn.py
tests/: test_api_attachment.py  test_api_stream.py  test_build_status.py  test_context_documents.py  test_docker.sh  test_document_parsing.py  test_msteams.py  test_openai_api.py  test_package_version.py  test_serenity_facade.py  test_truncate_text_shadowing.py
tests/agent/: test_auto_compact.py  test_consolidate_offset.py  test_consolidator.py  test_context_prompt_cache.py  test_dream.py  test_evaluator.py  test_gemini_thought_signature.py  test_git_store.py  test_heartbeat_service.py  test_hook_composite.py  test_loop_consolidation_tokens.py  test_loop_cron_timezone.py  test_loop_save_turn.py  test_mcp_connection.py  test_memory_store.py  test_onboard_logic.py  test_runner.py  test_session_manager_history.py  test_skill_creator_scripts.py  test_skills_loader.py  test_task_cancel.py  test_tool_hint.py  test_unified_session.py
tests/channels/: test_base_channel.py  test_channel_manager_delta_coalescing.py  test_channel_plugins.py  test_dingtalk_channel.py  test_discord_channel.py  test_email_channel.py  test_feishu_domain.py  test_feishu_markdown_rendering.py  test_feishu_mention.py  test_feishu_mentions.py  test_feishu_post_content.py  test_feishu_reaction.py  test_feishu_reply.py  test_feishu_streaming.py  test_feishu_table_split.py  test_feishu_tool_hint_code_block.py  test_matrix_channel.py  test_qq_ack_message.py  test_qq_channel.py  test_qq_media.py  test_slack_channel.py  test_telegram_channel.py  test_websocket_channel.py  test_websocket_integration.py  test_wecom_channel.py  test_weixin_channel.py  test_whatsapp_channel.py  ws_test_client.py
tests/cli/: test_cli_input.py  test_commands.py  test_restart_command.py  test_safe_file_history.py
tests/command/: test_builtin_dream.py
tests/config/: test_config_migration.py  test_config_paths.py  test_dream_config.py  test_env_interpolation.py
tests/cron/: test_cron_service.py  test_cron_tool_list.py  test_cron_tool_schema_contract.py
tests/providers/: test_anthropic_thinking.py  test_azure_openai_provider.py  test_cached_tokens.py  test_custom_provider.py  test_enforce_role_alternation.py  test_litellm_kwargs.py  test_llm_response.py  test_minimax_anthropic_provider.py  test_mistral_provider.py  test_openai_responses.py  test_prompt_cache_markers.py  test_provider_error_metadata.py  test_provider_retry.py  test_provider_retry_after_hints.py  test_provider_sdk_retry_defaults.py  test_providers_init.py  test_reasoning_content.py  test_stepfun_reasoning.py
tests/security/: test_security_network.py
tests/tools/: test_edit_advanced.py  test_edit_enhancements.py  test_exec_env.py  test_exec_platform.py  test_exec_security.py  test_filesystem_tools.py  test_mcp_tool.py  test_message_tool.py  test_message_tool_suppress.py  test_notebook_tool.py  test_read_enhancements.py  test_sandbox.py  test_search_tools.py  test_tool_registry.py  (+3 more)
(+60 files in other folders)
