[project]
name = "serenity"
version = "0.1.9"
description = "A lightweight personal AI assistant framework"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = "~=3.11.0"
license = {text = "CC-BY-NC-4.0"}
authors = [
    {name = "Daniel T Niamke", email = "serenitydev32@gmail.com"}
]
keywords = ["ai", "agent", "chatbot", "local-ai", "long-term-memory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Free for non-commercial use",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "typer>=0.20.0,<1.0.0",
    "click>=8.1.0",
    "anthropic>=0.45.0,<1.0.0",
    "pydantic>=2.12.0,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "websockets>=16.0,<17.0",
    "websocket-client>=1.9.0,<2.0.0",
    "httpx>=0.28.0,<1.0.0",
    "ddgs>=9.5.5,<10.0.0",
    "oauth-cli-kit>=0.1.3,<1.0.0",
    "loguru>=0.7.3,<1.0.0",
    "readability-lxml>=0.8.4,<1.0.0",
    "rich>=14.0.0,<15.0.0",
    "croniter>=6.0.0,<7.0.0",
    "dingtalk-stream>=0.24.0,<1.0.0",
    "python-telegram-bot[socks]>=22.6,<23.0",
    "lark-oapi>=1.5.0,<2.0.0",
    "socksio>=1.0.0,<2.0.0",
    "python-socketio>=5.16.0,<6.0.0",
    "msgpack>=1.1.0,<2.0.0",
    "slack-sdk>=3.39.0,<4.0.0",
    "slackify-markdown>=0.2.0,<1.0.0",
    "qq-botpy>=1.2.0,<2.0.0",
    "python-socks[asyncio]>=2.8.0,<3.0.0; sys_platform != 'win32'",
    "prompt-toolkit>=3.0.50,<4.0.0",
    "questionary>=2.0.0,<3.0.0",
    "mcp>=1.26.0,<2.0.0",
    "json-repair>=0.57.0,<1.0.0",
    "chardet>=3.0.2,<6.0.0",
    "openai>=2.8.0",
    "tiktoken>=0.12.0,<1.0.0",
    "jinja2>=3.1.0,<4.0.0",
    "dulwich>=0.22.0,<1.0.0",
    "pyyaml>=6.0,<7.0.0",
    "pypdf>=5.0.0,<6.0.0",
    "python-docx>=1.1.0,<2.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "python-pptx>=1.0.0,<2.0.0",
    "filelock>=3.25.2",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",
    "hdbscan>=0.8.38",
    "scipy>=1.13.0",
    "torch>=2.3.0",
]

[project.optional-dependencies]
api = [
    "aiohttp>=3.9.0,<4.0.0",
]
wecom = [
    "wecom-aibot-sdk-python>=0.1.5",
]
weixin = [
    "qrcode[pil]>=8.0",
    "pycryptodome>=3.20.0",
]
msteams = [
    "PyJWT>=2.0,<3.0",
    "cryptography>=41.0",
]

matrix = [
    "matrix-nio[e2e]>=0.25.2; sys_platform != 'win32'",
    "mistune>=3.0.0,<4.0.0",
    "nh3>=0.2.17,<1.0.0",
]
discord = [
    "discord.py>=2.5.2,<3.0.0",
]
langsmith = [
    "langsmith>=0.1.0",
]
pdf = [
    "pymupdf>=1.25.0",
]
spotify = [
    "spotipy>=2.23.0",
]
obs = [
    "obsws-python>=1.7.0",
]
senses = [
    # ── Ears (STT) ────────────────────────────────────────────────────────────
    "faster-whisper>=1.0.0",        # speech-to-text (small model for wake word + full transcription)
    "sounddevice>=0.4.6",           # microphone capture
    "soundfile>=0.12.0",            # audio file I/O
    "scipy>=1.10.0",                # audio resampling (voice clone 24kHz conversion)
    # ── TTS base (works for edge-tts + cloud providers, no heavy deps) ────────
    "edge-tts>=6.0.0",              # Microsoft Neural TTS — free, no key, no model download
    "pydub>=0.25.0",                # PCM→OGG/MP3 conversion (DashScope, pydub-based output)
    # ── Eyes (vision stack, CPU-only) ─────────────────────────────────────────
    "opencv-python>=4.8.0",         # camera feed, face presence detection, and frame capture
    "mss>=9.0.0",                   # fast screen capture
    "pillow>=10.0.0",               # image I/O
    "imagehash>=4.3.0",             # perceptual change detection (visual memory)
    # ── Shared ────────────────────────────────────────────────────────────────
    "pyautogui>=0.9.54",            # PC control: mouse + keyboard
]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "aiohttp>=3.9.0,<4.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "ruff>=0.1.0",
    "pymupdf>=1.25.0",
]

[project.scripts]
serenity = "serenity_setup:main"
sera = "serenity.cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = [
    "serenity/**/*.py",
    "serenity/templates/**/*.md",
    "serenity/skills/**/*.md",
    "serenity/skills/**/*.sh",
    "serenity_nnn/**/*.py",
    "serenity_setup.py",
]

[tool.hatch.build.targets.wheel]
packages = ["serenity", "serenity_nnn"]

[tool.hatch.build.targets.wheel.sources]
"serenity" = "serenity"

[tool.hatch.build.targets.wheel.force-include]
"bridge" = "serenity/bridge"

[tool.hatch.build.targets.sdist]
include = [
    "serenity/",
    "serenity_nnn/",
    "serenity_setup.py",
    "bridge/",
    "README.md",
    "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["serenity"]
omit = ["tests/*", "**/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
